--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@ var DEFAULTS = {
   'cfg-manual': 'https://docs.google.com/document/d/1RSuv7_DBdIxhYt2Z6SGDXc5-jA8o4kcY/edit?usp=sharing&ouid=117075654036126053049&rtpof=true&sd=true',
   'cfg-charter': 'https://docs.google.com/document/d/1ddbK76fQrDMvFIz1ktR3N_GEsK7w11KV/edit?usp=sharing&ouid=117075654036126053049&rtpof=true&sd=true',
   'cfg-agenda': 'https://docs.google.com/document/d/1-IZhMNgvIQ58IEhWmp69Sm5z84Vkus2C/edit?usp=sharing&ouid=117075654036126053049&rtpof=true&sd=true',
-  'cfg-brief': 'https://drive.google.com/file/d/1JtxMvmh5vnqn78PY7wy7R4pLKtriMSG2/view?usp=sharing'
+  'cfg-brief': 'https://sagebhardt.github.io/comite-ai/guia-project-brief.html'
 };
 var LINK_MAP = {
   'cfg-form':      { selector: '#cta-form-link, .form-link', attr: 'href' },
