Update portal configuration URLs in index.html

--- a/index.html
+++ b/index.html
@@ -802,8 +802,8 @@
 // ============ PORTAL CONFIGURATION ============
 var CONFIG_KEY = 'portal_comite_ai_config';
 var DEFAULTS = {
-  'cfg-form': 'https://docs.google.com/forms/d/e/1FAIpQLSeUAmzqmaY1a252D9CLQH4kicRc3DkVZKClNipzCXkQDC64fw/viewform',
-  'cfg-tracker': 'https://docs.google.com/spreadsheets/d/19byfCyONVbLnk_DkCNoAuJbDdcs-Bhu_55y2MRJk5GA/edit?usp=sharing',
+  'cfg-form': 'https://docs.google.com/forms/d/e/1FAIpQLSfwCWX1QTn5MQ1fyOu6Hzq0tICgnAn6RrC7TPlyZf-GryQqtA/viewform',
+  'cfg-tracker': 'https://docs.google.com/spreadsheets/d/1bHwyOW4kd20_HtuDlWa_VB4jOTlmwe4fqBo6Rzbh74I/edit',
   'cfg-checklist': 'https://docs.google.com/spreadsheets/d/1Kg7YiVYm6uxpQIV1l7N7GjlbQmUwohnd/edit?usp=sharing&ouid=117075654036126053049&rtpof=true&sd=true',
   'cfg-manual': 'https://docs.google.com/document/d/1RSuv7_DBdIxhYt2Z6SGDXc5-jA8o4kcY/edit?usp=sharing&ouid=117075654036126053049&rtpof=true&sd=true',
   'cfg-charter': 'https://docs.google.com/document/d/1ddbK76fQrDMvFIz1ktR3N_GEsK7w11KV/edit?usp=sharing&ouid=117075654036126053049&rtpof=true&sd=true',
