--- a/guia-project-brief.html
+++ b/guia-project-brief.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cómo Escribir un Buen Project Brief — Comité AI — Yánekens S.A.</title>
+<title>Cómo Escribir un Buen Project Brief — Comité AI — Yáneken</title>
 <style>
   :root { --accent: #3300FF; --accent-light: #E8E0FF; --green: #2E7D32; --green-light: #E8F5E9; --orange: #FF6600; --orange-light: #FFF3E0; --red: #C62828; --red-light: #FFEBEE; --gray-50: #FAFAFA; --gray-200: #EEEEEE; --gray-600: #757575; --gray-800: #424242; --radius: 12px; --shadow: 0 2px 12px rgba(0,0,0,0.08); }
   * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -429,7 +429,7 @@
 </div>
 
 <div class="footer">
-  <p><span style="font-weight:700; letter-spacing:2px;">YÁNEKEN</span> · Guía de Project Brief — Comité AI · Yánekens S.A. · Febrero 2026</p>
+  <p><span style="font-weight:700; letter-spacing:2px;">YÁNEKEN</span> · Guía de Project Brief — Comité AI · Yáneken · Febrero 2026</p>
   <p style="margin-top: 4px; font-size: 0.8rem;">Dudas: <a href="mailto:sgr@ynk.cl" style="color: var(--accent);">sgr@ynk.cl</a></p>
 </div>
 
