--- a/politica-mvp.html
+++ b/politica-mvp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Política de Desarrollo MVP con IA — Yánekens S.A.</title>
+  <title>Política de Desarrollo MVP con IA — Yáneken</title>
   <style>
     :root {
       --accent: #3300FF;
@@ -82,7 +82,7 @@
   <!-- INTRODUCCIÓN -->
   <div class="section">
     <h2 class="section-title">Objetivo</h2>
-    <p>Yánekens S.A. permite que los empleados desarrollen MVPs (Minimum Viable Product) utilizando herramientas de IA para crear versiones funcionales y simplificadas de soluciones que resuelvan problemas concretos del negocio.</p>
+    <p>Yáneken permite que los empleados desarrollen MVPs (Minimum Viable Product) utilizando herramientas de IA para crear versiones funcionales y simplificadas de soluciones que resuelvan problemas concretos del negocio.</p>
 
     <div class="alert alert-warn">
       <span class="alert-icon">⚠️</span>
@@ -234,7 +234,7 @@
 </div>
 
 <div class="footer">
-  <p><span style="font-weight:700; letter-spacing:2px;">YÁNEKEN</span> · Política MVP con IA · Comité AI · Yánekens S.A. · Febrero 2026</p>
+  <p><span style="font-weight:700; letter-spacing:2px;">YÁNEKEN</span> · Política MVP con IA · Comité AI · Yáneken · Febrero 2026</p>
   <p style="margin-top: 4px;"><a href="mailto:sgr@ynk.cl" style="color: var(--accent);">sgr@ynk.cl</a> · <a href="https://sagebhardt.github.io/comite-ai/" style="color: var(--accent);">Portal del Comité AI</a></p>
 </div>
 
